[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[dependency-groups]
dev = [
  "gitpython==3.1.50",
  "molmass==2026.6.9",
  "more-itertools==11.1.0",
  "pandas-stubs==3.0.3.260530",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "scipy-stubs==1.18.0.0",
  "toml-sort==0.24.4",
  "tomlkit==0.15.0",
  "typer==0.26.8",
]

[project]
dependencies = [
  "geopandas==1.1.3",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "pyproj==3.7.2",
  "rasterio==1.5.0",
  "scipy==1.18.0",
  "shapely==2.1.2",
  "statsmodels==0.14.6",
  "xarray==2026.4.0",
]
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
name = "isometric-calculation-library"
readme = "README.public.md"
requires-python = ">=3.13"
version = "0.32.9"

[tool.pyright]
extends = "../../services/backend/base_configs/pyrightconfig.json"
reportImportCycles = "error" # this makes it easier to inline hidden imports, by topologically sorting a DAG of modules

[tool.ruff]
extend = "../../services/backend/base_configs/ruff.toml"

[tool.ruff.lint]
extend-select = ["CPY001"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"molmass".msg = "molmass is a test-only dependency. Element data is inlined in elements.py and tested against molmass."

[tool.ruff.lint.flake8-copyright]
notice-rgx = '# Copyright \(c\) 2026 Isometric HQ Ltd\n# Licensed under PolyForm Noncommercial 1\.0\.0\n# https://polyformproject\.org/licenses/noncommercial/1\.0\.0/\n'

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]

[tool.tomlsort]
no_sort_tables = true
sort_inline_tables = true
sort_table_keys = true
spaces_indent_inline_array = 2
trailing_comma_inline_array = true

[tool.uv]
exclude-newer = "3 days" # prevent installing packages uploaded in the last 3 days (supply chain protection)

[tool.uv.build-backend]
module-root = ""
# keep in sync with .github/paths/calculation-library-package-scope.env
source-exclude = ["/isometric_calculation_library/hidden"]
wheel-exclude = ["/isometric_calculation_library/hidden"]
